--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Moulpali&family=Oxanium:wght@200..800&family=Play:wght@400;700&family=Sixtyfour+Convergence:SCAN@-53&family=Slabo+27px&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Monoton&family=Moulpali&family=Oxanium:wght@200..800&family=Play:wght@400;700&family=Sixtyfour+Convergence:SCAN@-53&family=Slabo+27px&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <title>F1 Flashback</title>
     <style>
